Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19424

"Game Controller" control panel applet : ESC does not close

    XMLWordPrintable

Details

    Description

      reactos-bootcd-0.4.15-dev-7434-g8b5c5fb-x86-gcc-lin-dbg

      • "Game Controller" control panel applet
      • ESC does not close (unlike all other control panel applets)

      Cause : IDCANCEL is not handled in MainPageProc https://git.reactos.org/?p=reactos.git;a=blob;f=dll/cpl/joy/joy.c;h=057ec4c85348e0bfce7b046d3505580e722b03ce;hb=6c93f3ca6b95fa5e1806fc29295d3bc8ada979f9#l272  

      Fixed by patch : joycancel.patch

      Attachments

        Activity

          People

            katayama_hirofumi_mz Katayama Hirofumi MZ
            KRosUser KRosUser
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: