[0.4.14][JOY] Add IDCANCEL action to MainPageProc (#6346) CORE-19424 + RC tweaks

This ports back:
0.4.15-dev-7456-g cbc3ee2287c1972ac8257da60388a5de9ea6c0e5 CORE-19424 "Game Controller" control panel applet : ESC does not close
and a few trivial rc improvements.

Tendency for binary size is to shrink slightly, but manages to only reach the next lower quantum in releases/0.4.14:

master          RosBEWin2.2.2 GCC8.4.0 dbg x86                144.384 (0.4.15-dev-7557-gc858429)
releases/0.4.14 RosBEWin2.1.6 GCC4.7.2 dbg x86     133.632 -> 133.120
releases/0.4.13 RosBEWin2.1.6 GCC4.7.2 dbg x86     125.440 -> 125.440 (interesting: 0.4.12 & 0.4.13 do have the exact same code *within* this module)
releases/0.4.12 RosBEWin2.1.6 GCC4.7.2 dbg x86     127.488 -> 127.488 (interesting: 0.4.12 & 0.4.13 do have the exact same code *within* this module)
releases/0.4.11 RosBEWin2.1.6 GCC4.7.2 dbg x86     125.952 -> 125.952
releases/0.4.10 RosBEWin2.1.6 GCC4.7.2 dbg x86     125.952 -> 125.952
releases/0.4. 9 RosBEWin2.1.6 GCC4.7.2 dbg x86     125.952 -> 125.952
releases/0.4. 8 RosBEWin2.1.6 GCC4.7.2 dbg x86     125.952 -> 125.952
releases/0.4. 7 RosBEWin2.1.6 GCC4.7.2 dbg x86     125.952 -> 125.952

I am not aware yet which exact commit in the toolchain or dependent libs made it shrink from releases/0.4.12 to releases/0.4.13